# cognitive-shield

./: .cline-master-prompt.md  .gitignore  ACTIVATE_SOVEREIGNTY.bat  ASSET_INTEGRITY.md  AUTOMATION.md  CALCIUM_PYROPHOSPHATE_GEODESIC_ARCHITECTURES.md  CALCIUM_PYROPHOSPHATE_GEODESIC_COGNITION.md  CHANGELOG.md  CHECKPOINT_STRUCTURE.md  CLA.md  COGNITIVE_SHIELD_LIBRARY_README.md  CONVERGENCE_QUANTUM_SECURITY_QKD_PQC_HROT.md  DEDICATION.md  DEDICATION_PAGE.md  DEFENSIVE_PUBLICATION.md  DEFENSIVE_PUBLICATION_DRAFT.md  DEFENSIVE_PUBLICATION_FIGURES_PROMPTS.md  DEFENSIVE_PUBLICATION_FIGURE_PROMPTS.md  DEFENSIVE_PUBLICATION_WORKFLOW.md  DELTA_IMPERATIVE_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_START.md  DESIGN_SYSTEM.md  DETAILED_EXPLANATION.md  DIGITAL_SOUL_ARCHITECTURE.md  DONATION_WALLET_ROBUST_README.md  EASTER_EGGS.md  EMERGENCY_MOTION_TO_RECONSIDER.md  EXPERIMENTAL_PROTOCOL_EMOTIONAL_ENTROPY.md  EXPERIMENTAL_PROTOCOL_EMOTIONAL_ENTROPY_STRIPPING.md  FINAL_SOVEREIGNTY_DECLARATION.md  FIRST_LIGHT_PROTOCOL.md  FORENSIC_EVALUATION_REPORT.md  FUNNEL_TROUBLESHOOTING.md  GENESIS_GATE_OPEN.md  GENESIS_GATE_OPENING.md  GEODESIC_ARCHITECTURE.md  GEODESIC_CONVERGENCE_ANALYSIS.md  GEODESIC_SINGULARITY_ANALYSIS.md  GEODESIC_SWAN_SONG.md  (+88 more)
67/: .env.example  .gitignore  CREDITS.md  FULL_SYSTEM_TEST.py  MANIFESTO.md  ONBOARDING_CHECKLIST.md  README.md  STOP.bat  STOP.ps1  abdicate.sh  capacitor.config.ts  cleanup-node-modules.ps1  create_defensive_publication_pdf.js  docker-compose.yml  index.html  tauri.conf.json
67/phenix_phantom/components/test_suite/: CMakeLists.txt  test_suite.cpp
configs/: master.config.ts
docs/: ARCHITECTURE.md  CHECKPOINT_CONNECTION.md  ECONOMIC_TRANSITION_STRATEGY.md  FAMILY_GETTING_STARTED.md  GENESIS_GATE_TOPOLOGY.md  GEODESIC_ENGINE_ANALYSIS.md  LAUNCH_CHECKLIST.md  ONBOARDING.md  PHENIX_HARDWARE.md  (+6 more)
src-tauri/: Cargo.toml  build.rs
src-tauri/src/: main.rs
(+316 files in other folders)
